# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,15 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import profileRouter from "./profile";
+import checkinsRouter from "./checkins";
+import workoutsRouter from "./workouts";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(authRouter);
 router.use(profileRouter);
+router.use(checkinsRouter);
+router.use(workoutsRouter);
 
 export default router;
